--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "artoodetoo",
-            "email": "i.am@aroodetoo.org"
+            "email": "i.am@artoodetoo.org"
         }
     ],
     "require": {
