--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
         "psr-4": {
             "R2\\Templating\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "R2\\Templating\\Tests": "tests"
+        }
     }
 }
